--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,15 @@
 # ワークフローの名前
-name: Deploy
+name: Build
 
 # 起動のタイミング
-# 今回はmasterブランチへのpush
 on:
-  push:
+  pull_request:
     branches:
       - master
 
 # ジョブの定義
 jobs:
-  deploy:
+  build:
     # 実行するインスタンス
     runs-on: ubuntu-latest
 
@@ -38,11 +37,3 @@ jobs:
         yarn build
       env:
         CI: true
-
-    # gh-pagesを使って公開
-    - name: deploy
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./build
