--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -40,6 +40,7 @@ rules:
       - .tsx
   'react/jsx-indent': off
   'react/jsx-one-expression-per-line': off
+  'react/require-default-props': off
   'import/prefer-default-export': off
 settings: 
   import/resolver:
