--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -43,6 +43,7 @@ rules:
   'react/require-default-props': off
   'import/prefer-default-export': off
   'operator-linebreak': off
+  'object-curly-newline': off
 settings: 
   import/resolver:
     node:
