--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react-router": "^5.1.8",
+    "@types/react-tabs": "^2.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-tabs": "^3.1.2",
     "sass": "^1.30.0",
     "web-vitals": "^0.2.4"
   },
