chore: yarn replace to pnpm

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,8 @@ jobs:
     # パッケージのインストールとアプリのビルド
     - name: install and build
       run: |
-        yarn
-        yarn build
+        pnpm
+        pnpm build
       env:
         CI: true
 
