--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,7 +36,7 @@ jobs:
     # パッケージのインストールとアプリのビルド
     - name: lint
       run: |
-        yarn
-        yarn lint
+        pnpm
+        pnpm lint
       env:
         CI: true
