--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
     # パッケージのインストールとアプリのビルド
     - name: install and build
       run: |
-        yarn
-        yarn build
+        pnpm
+        pnpm build
       env:
         CI: true
