fix: add install command to pnpm

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
     # パッケージのインストールとアプリのビルド
     - name: install and build
       run: |
-        pnpm
+        pnpm i
         pnpm build
       env:
         CI: true
