--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "lib": [
       "dom",
       "dom.iterable",
@@ -21,7 +21,8 @@
     "noEmit": true,
     "typeRoots": [
       "types"
-    ]
+    ],
+    "types": ["vite/client", "vite-plugin-svgr/client"]
   },
   "include": [
     "src",
