--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ on:
 
 # ジョブの定義
 jobs:
-  deploy:
+  build:
     # 実行するインスタンス
     runs-on: ubuntu-latest
 
@@ -46,24 +46,21 @@ jobs:
         CI: true
 
     # gh-pagesを使って公開
-    - name: deploy
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./dist
-
-    - name: Create CNAME
-      run: |
-        echo "isso0424.dev" >> CNAME
-  
-    - name: Commit
-      uses: stefanzweifel/git-auto-commit-action@v4
+    - name: publish to artifact
+      uses: peaceiris/upload-pages-artifact@v1
       with:
-        branch: gh-pages
-        commit_message: "Create CNAME"
-        commit_options: "--no-verify --signoff"
-        file_pattern: CNAME
-        repository: .
-        commit_user_name: 絶対CNAME守るMAN
-        commit_author: CNAME MAN <actions@github.com> # defaults to author of the commit that triggered the run
+        path: ./dist
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to Github Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
