--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,16 +24,22 @@ jobs:
     # チェックアウト
     - uses: actions/checkout@v2
 
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v2
+      with:
+        version: 8
+
     # 使用するnodeのバージョンを指定
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+        cache: "pnpm"
 
     # パッケージのインストールとアプリのビルド
     - name: install and build
       run: |
-        yarn
-        yarn build
+        pnpm i --frozen-lockfile
+        pnpm build
       env:
         CI: true
