chore: apply stylelint

--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "gh-pages": "^5.0.0",
     "prettier": "^2.8.7",
     "react-test-renderer": "^18.2.0",
+    "stylelint": "^15.4.0",
+    "stylelint-config-standard-scss": "^7.0.1",
     "typescript": "^5.0.4",
     "vite": "^4.2.1",
     "vite-plugin-svgr": "^2.4.0",
