chore: add stylelint to CI

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint -c .eslintrc.yml --ignore-path .gitignore 'src/**/*.{ts,tsx}'",
-    "lint:fix": "eslint -c .eslintrc.yml --fix --ignore-path .gitignore 'src/**/*.{ts,tsx}'",
+    "lint": "pnpm lint:eslint && pnpm lint:style",
+    "lint:eslint": "eslint -c .eslintrc.yml --ignore-path .gitignore 'src/**/*.{ts,tsx}'",
+    "lint:style": "stylelint '**/*.scss'",
+    "lint:fix": "eslint -c .eslintrc.yml --fix --ignore-path .gitignore 'src/**/*.{ts,tsx}' && stylelint '**/*.scss' --fix",
     "serve": "vite preview"
   },
   "browserslist": {
