--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,9 +6,7 @@ extends:
   - "plugin:react/recommended"
   - "plugin:@typescript-eslint/recommended"
   - "plugin:prettier/recommended"
-  - "prettier/@typescript-eslint"
-  - "prettier/react"
-  - "prettier/prettier"
+  - prettier
   - airbnb
 parser: '@typescript-eslint/parser'
 parserOptions:
